tc_tests/intarr4.fail
char main()
{
	int *a;
	int b[4];
	char c[4];
	b[0] = 32;
	b[1] = 16;
	b[2] = 8;
	b[3] = 20;
  c[0] = 2;
  c[1] = 3;
  c[2] = 4;

  b[3] = c[a] + 2;  //error index from ptr

//  c = c + b[2]; //error
//  b = b[1] + c; //error
//  c = c[1] + b; //error
//  b = b + c[2]; //error

	return b[3];
}
